Add accounts modal: Implement PlaidLink
This implements the Plaid Link portion of the add accounts modal.
When the user clicks add via Link to Bank, it will open the Plaid
Link UI. Once the user completes the Plaid steps, we then set the
access token on the backend which will return two job IDs: one for
the Fetch Item Details Job, and one for the Sync Accounts Job.

If both jobs show as completed, the modal will trigger the page to
refetch the accounts from the backend.

If any of the jobs fail, we will display an error message that
tells the user this will be resolved shortly.

This also implements the Plaid Api fetch logic. There are three
APIs for plaid:
CreateLinkToken which is required to start a P fetch logic. There
are three APIs for plaid:
- CreateLinkToken which is required to start a Plaid Link session.session.
- SetAccessToken which stores the access token on the backend and
  creates a new plaid item
- FetchItemInitializationJobStatuses which returns the status of
  the two jobs that are enqueued to setup a new Plaid Item / Link
  connection.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
+    "react-plaid-link": "^3.6.1",
     "react-select": "^5.8.3",
     "recharts": "^2.13.3",
     "use-debounce": "^10.0.4"
